# arrayloader-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  bench_run.py  benchmark_mapped.py  benchmark_mapped_persistent.py  benchmark_merlin_mapped_census_epochs.py  benchmarks.py  compute-summary-stats.py  environment.yml  figure_2_iteration_benchmark.py  figure_3_multi_gpu_mapped_collection.py  hatch.toml  main.py  pyproject.toml  setup.py
.github/workflows/: build.yml  doc-changes.yml  run.yml
archive/: README.md  benchmark_merlin_mapped_census_epochs.py  figure_2_storage_stats.py
archive/.github/workflows/: run.yml
arrayloader_benchmarks/: __init__.py
scripts/: benchmark_store_submit.py  create_benchmark_store_submit.py  run_create_zarr_store_from_h5ads_for_tahoe100m.py  run_data_loading_benchmark_on_tahoe100m.py  run_loading_benchmark_on_collection.py  shuffle_and_shard_tahoe100m_h5ads.py
src/: run_benchmarks.ipynb
src/arrayloader_benchmarks/: benchmark_store.py  compute_spec.py  create_benchmark_store.py  create_benchmark_store.sh  create_sqlite_databases.py  utils.py
src/arrayloader_benchmarks/annbatch/: benchmark_annbatch.py  benchmark_arrayloaders.py  prepare_store.py
src/arrayloader_benchmarks/arrayloaders/: benchmark_arrayloaders.py  prepare_store.py  run_benchmark.py
src/arrayloader_benchmarks/benchmark_setup/: protein_coding_genes.parquet  shuffle_and_shard_tahoe100M_h5ads.py
src/arrayloader_benchmarks/conf/: benchmark_store_config.yaml  create_benchmark_store_config.yaml
src/arrayloader_benchmarks/mapped_collection/: benchmark_mapped_collection.py
src/arrayloader_benchmarks/scDataset/: benchmark_scDataset.py  run_benchmark.py
